--- a/BuyTicketsTest/BuyTicketsTest.csproj
+++ b/BuyTicketsTest/BuyTicketsTest.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BuyTickets\BuyTickets.csproj" />
+  </ItemGroup>
+
 </Project>
