--- a/BuyTickets/BuyTickets.csproj
+++ b/BuyTickets/BuyTickets.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Flunt" Version="2.0.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
